RESOLVED FIXED52807
Web Inspector: [Chromium] CPU Profiles are cleared when navigating back and forth
https://bugs.webkit.org/show_bug.cgi?id=52807
Summary Web Inspector: [Chromium] CPU Profiles are cleared when navigating back and f...
Mikhail Naganov
Reported 2011-01-20 05:50:00 PST
From http://code.google.com/p/chromium/issues/detail?id=70012: eported by project member sunandt@chromium.org, Yesterday (38 hours ago) What steps will reproduce the problem? 1. Navigate to cnn.com 2. Create profiles 3. Click on a news link - profiles are cleared if you are profiling something here 4. Stop profiling and go back to cnn.com What is the expected output? Profiles should remain What do you see instead? Profiles are cleared Google Chrome 10.0.642.0 (Official Build 71626)
Attachments
patch (2.89 KB, patch)
2011-01-20 05:59 PST, Mikhail Naganov
pfeldman: review+
Mikhail Naganov
Comment 1 2011-01-20 05:59:25 PST
Mikhail Naganov
Comment 2 2011-01-20 08:42:32 PST
Manually committed http://trac.webkit.org/changeset/76247 2011-01-20 Mikhail Naganov <mnaganov@chromium.org> Reviewed by Pavel Feldman. Web Inspector: [Chromium] CPU Profiles are cleared when navigating back and forth. Profiles are now not cleared unless renderer instance was changed. https://bugs.webkit.org/show_bug.cgi?id=52807 * inspector/InspectorController.cpp: (WebCore::InspectorController::restoreProfiler): * inspector/InspectorProfilerAgent.cpp: (WebCore::InspectorProfilerAgent::resetState): (WebCore::InspectorProfilerAgent::resetFrontendProfiles): * inspector/InspectorProfilerAgent.h:
Note You need to log in before you can comment on or make changes to this bug.