2011-01-20  Mikhail Naganov  <mnaganov@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: [Chromium] CPU Profiles are cleared when navigating back and forth.

        Profiles are now not cleared unless renderer instance was changed.

        https://bugs.webkit.org/show_bug.cgi?id=52807

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::restoreProfiler):
        * inspector/InspectorProfilerAgent.cpp:
        (WebCore::InspectorProfilerAgent::resetState):
        (WebCore::InspectorProfilerAgent::resetFrontendProfiles):
        * inspector/InspectorProfilerAgent.h:

Canonical link: https://commits.webkit.org/66485@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76247 268f45cc-cd09-0410-ab3c-d52691b4dbfc