Source/WebCore/inspector/InspectorProfilerAgent.h
@@ -65,6 +65,7 @@ public:
     bool isRecordingUserInitiatedProfile() { return m_recordingUserInitiatedProfile; }
     void removeProfile(const String& type, unsigned uid);
     void resetState();
+    void resetFrontendProfiles();
     void setFrontend(InspectorFrontend* frontend) { m_frontend = frontend; }
     void startUserInitiatedProfiling();
     void stopUserInitiatedProfiling(bool ignoreProfile = false);
